# RobotProject

abb_irb4600/abb_irb4600_description/: CMakeLists.txt  package.xml
abb_irb4600/abb_irb4600_description/launch/: load_irb4600.launch  robot_interface_download_irb4600.launch  robot_state_visualize_irb4600.launch  test_irb4600_20_250.launch
abb_irb4600/abb_irb4600_description/urdf/: irb4600_20_250.xacro  irb4600_20_250_macro.xacro
abb_irb4600/abb_irb4600_gazebo/: CMakeLists.txt  package.xml
abb_irb4600/abb_irb4600_gazebo/config/: abb_irb4600_arm_controller.yaml  gripper_controller_robotiq.yaml
abb_irb4600/abb_irb4600_gazebo/launch/: abb_irb4600_control.launch  abb_irb4600_gazebo.launch  load_abb_irb4600.launch  spawn_abb_irb4600.launch
abb_irb4600/abb_irb4600_gazebo/urdf/: gazebo.xacro  gazebo_2f.urdf  gazebo_2f.xacro  gazebo_transmission.xacro  transmission_2f.xacro
abb_irb4600/abb_irb4600_master/: CMakeLists.txt  package.xml
abb_irb4600/abb_irb4600_master/src/: jtc_node.py
abb_irb4600/abb_irb4600_moveit/: CMakeLists.txt  package.xml
custom_pallet_gripper/: CMakeLists.txt  package.xml
custom_pallet_gripper/launch/: abb_with_gripper_gazebo.launch
custom_pallet_gripper/urdf/: pallet_gripper.urdf.xacro
